# django_fs_test

./: .gitignore  README.md  pyproject.toml
django_fs/: conftest.py  manage.py
django_fs/django_fs/: .env.dist  asgi.py  settings.py  urls.py  wsgi.py
django_fs/fixtures/: clients.json  transactions.json
django_fs/transactions/: custom_validators.py  models.py  routers.py  serializers.py  tests.py  urls.py  views.py
django_fs/transactions/migrations/: 0001_initial.py
django_fs/users/: models.py  routers.py  serializers.py  tests.py  views.py
django_fs/users/migrations/: 0001_initial.py
